# desktop-calendar-tauri

./: .gitignore  ARCHITECTURE.md  CODING_RULES.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vitest.config.ts
docs/: DEVELOPMENT-GUIDELINES.md  MCP-APPS-GUIDE.md  OPTIMIZATION-PLAN.md  UI_OPTIMIZATION_PLAN.md
docs/harness-doc/: 00-INDEX.md  01-data-model.md  02-window-system.md  03-week-view.md  04-event-display.md  05-date-navigation.md  06-mcp-server.md  07-mcp-apps-widget.md  08-data-sync.md  09-error-handling.md
docs/ui-optimization/: 01-overview.md  02-design-foundations.md  03-icon-system.md  04-motion-and-interaction.md  04b-widget-transition.md  05-accessibility.md  10-components-widget.md  11-components-week-view.md  12-components-chrome.md  20-migration-roadmap.md  30-risks-and-decisions.md  (+1 more)
scripts/: run-all-tests.mjs  test-mcp.mjs
src/: App.css  App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  stderr.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: diagnostics.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: diag_cmd.rs  event_cmd.rs  frontend_log.rs  mod.rs  window_cmd.rs
src-tauri/src/db/: event_repo.rs  migrations.rs  mod.rs  schema.sql
src-tauri/src/mcp/: helpers.rs  mod.rs  resources.rs  server.rs  tools.rs  widgets.rs
src-tauri/src/mcp/widgets/: event-detail.html  events-list.html  free-slots.html
src-tauri/src/models/: event.rs  mod.rs  reminder.rs
src-tauri/tests/: integration_tests.rs
tests/: App.test.tsx  main.test.tsx
(+78 files in other folders)
