[package]
name = "desktop-calendar-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
chrono = "0.4"
thiserror = "1"
dirs = "5"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
tracing-appender = "0.2"
futures = "0.3"
parking_lot = "0.12"
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "desktop_calendar_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
